# PjaText2

./: CMakeLists.txt  README.md  anagrams_flag.cpp  anagrams_flag.h  bylength_flag.cpp  bylength_flag.h  chars_flag.cpp  chars_flag.h  digit_file.cpp  digit_flag.h  digits_sum_flag.cpp  digits_sum_flag.h  file_flag.cpp  file_flag.h  flags.txt  help_flag.cpp  help_flag.h  input_flag.cpp  input_flag.h  main.cpp  newline_flag.cpp  newline_flag.h  numbers_flag.cpp  numbers_flag.h  output_flag.cpp  output_flag.h  palindromes_flag.cpp  palindromes_flag.h  revsort_flag.cpp  revsort_flag.h  sort_flag.cpp  sort_flag.h  words_flag.cpp  words_flag.h
